Bugfix: Fix bisq dashboard tables overflow. (#733)
* Fix bisq dashboard tables overflow.

* Fix nav-item mobile margin.

--- a/frontend/src/app/bisq/bisq-main-dashboard/bisq-main-dashboard.component.scss
+++ b/frontend/src/app/bisq/bisq-main-dashboard/bisq-main-dashboard.component.scss
@@ -18,14 +18,43 @@
 }
 
 .table-container {
-    font-size: 13px;
-    @media(min-width: 576px){
-        font-size: 16px;
+  overflow: scroll;
+  scrollbar-width: none;
+  font-size: 13px;
+  &::-webkit-scrollbar {
+      display: none;
+  }
+  @media(min-width: 576px){
+      font-size: 16px;
+  }
+  thead th{
+    text-align: right;
+    &:first-child {
+      text-align: left;
     }
-    &::-webkit-scrollbar {
+    &:nth-child(3) {
+      display: none;
+      @media(min-width: 1100px){
+        display: table-cell;
+      }
+    }
+  }
+  tr {
+    td {
+      text-align: right;
+      &:first-child {
+        text-align: left;
+      }
+      &:nth-child(3) {
         display: none;
+        @media(min-width: 1100px){
+          display: table-cell;
+        }
+      }
     }
+  }
 }
+
 
 .chart-container {
   height: 300px;
@@ -41,44 +70,43 @@
     background-color: #1d1f31;
     height: 100%;
   }
-  
+
   .card-title {
     color: #4a68b9;
     font-size: 1rem;
   }
-  
+
   .info-block {
     float: left;
     width: 350px;
     line-height: 25px;
   }
-  
+
   .progress {
     display: inline-flex;
     width: 100%;
     background-color: #2d3348;
     height: 1.1rem;
   }
-  
+
   .bg-warning {
     background-color: #b58800 !important;
   }
-  
+
   .skeleton-loader {
     max-width: 100%;
     &.shorter {
       max-width: 150px;
     }
   }
-  
+
   .more-padding {
     padding: 1.25rem 2rem 1.25rem 2rem;
   }
-  
+
   .graph-card {
     height: 100%;
     @media (min-width: 992px) {
       height: 385px;
     }
   }
-  
