--- a/frontend/src/app/components/bisq-master-page/bisq-master-page.component.scss
+++ b/frontend/src/app/components/bisq-master-page/bisq-master-page.component.scss
@@ -12,7 +12,7 @@ fa-icon {
 }
 
 li.nav-item {
-  margin: auto 10px;
+  margin: auto 5px;
   padding-left: 10px;
   padding-right: 10px;
 }
